--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,7 +96,10 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
   assets:
+    - assets/images/img.png
+    - assets/images/logo.png
     - assets/images/onboarding1.png
     - assets/images/onboarding2.png
     - assets/images/onboarding3.png
     - assets/images/profile_pic.jpg
+
