--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^0.8.7+4
+  firebase_storage: ^11.0.16
   firebase_core: ^2.5.0
+  path_provider: ^2.0.15
+
   http: ^1.2.2
   fluttertoast: ^8.0.9
   firebase_auth: ^4.3.0
