--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   firebase_storage: ^11.0.16
   firebase_core: ^2.5.0
   path_provider: ^2.0.15
-
+  cloud_firestore: ^4.17.5
   http: ^1.2.2
   fluttertoast: ^8.0.9
   firebase_auth: ^4.3.0
