--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   google_fonts: ^6.2.1
   dio: ^5.2.1 # For API calls
   shared_preferences: ^2.1.0 # For saving language preference
+  mobile_scanner: ^3.5.1
+  url_launcher: ^6.2.5
+  local_auth: ^2.1.6
 
 dev_dependencies:
   flutter_test:
